--- a/app/templates/static/404.html
+++ b/app/templates/static/404.html
@@ -1,6 +1,4 @@
-{% extends 'base.html' %}
-{% block title %}Страница не найдена{% endblock %}
-{% block content %}
+{% extends 'base.html' %} {% block title %}Страница не найдена{% endblock %} {% block content %}
 <div class="container py-5">
     <div class="row justify-content-center">
         <div class="col-md-6 col-lg-5">
@@ -19,4 +17,3 @@
     </div>
 </div>
 {% endblock %}
-
