--- a/app/templates/macros/cookie_consent.html
+++ b/app/templates/macros/cookie_consent.html
@@ -1,5 +1,5 @@
 <!-- Плашка согласия на использование куки -->
-<div id="cookie-consent-banner" class="cookie-consent-banner" style="display: none;">
+<div id="cookie-consent-banner" class="cookie-consent-banner" style="display: none">
     <div class="cookie-consent-content">
         <div class="cookie-consent-text">
             <h6 class="cookie-consent-title">
@@ -7,9 +7,11 @@
                 Использование куки
             </h6>
             <p class="cookie-consent-description mb-0">
-                Мы используем куки для улучшения работы сайта, аналитики и персонализации контента. 
-                Продолжая использовать сайт, вы соглашаетесь с нашей 
-                <a href="{{ url_for('main.privacy') }}" target="_blank" class="cookie-consent-link">политикой конфиденциальности</a>.
+                Мы используем куки для улучшения работы сайта, аналитики и персонализации контента. Продолжая
+                использовать сайт, вы соглашаетесь с нашей
+                <a href="{{ url_for('main.privacy') }}" target="_blank" class="cookie-consent-link"
+                    >политикой конфиденциальности</a
+                >.
             </p>
         </div>
         <div class="cookie-consent-actions">
